# Raytracer

./: .gitignore  CMakeLists.txt  README.md  builder.h  datatypes.h  main.cpp  object.h  parser.h  raytracer.h  render_options.h  test.cpp  tokenizer.h
include/raytracer/: builder.hpp  datatypes.hpp  geometry.hpp  image.hpp  object.hpp  options.hpp  parser.hpp  raytracer.hpp  render.hpp  tokenizer.hpp
src/: builder.cpp  builder.hpp  datatypes.cpp  datatypes.hpp  geometry.cpp  image.cpp  object.cpp  object.hpp  parser.cpp  parser.hpp  render.cpp  tokenizer.cpp  tokenizer.hpp
tests/: CMakeLists.txt  test_geometry.cpp  test_image.cpp  test_parser.cpp  test_tokenizer.cpp
textures/cat-cube/: cube.mtl
